<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EP Mobile</string>
    <string name="about_text">EP Mobile is a package of
		useful cardiac electrophysiology
		tools for your Android phone or tablet.
		These tools are for reference purposes only
		and are not meant to substitute for clinical judgment.
		If you have suggestions or comments, please contact us.
		\n\nEmail: mannd@epstudiossoftware.com
		\nWeb: www.epstudiossoftware.com
		\nSource: github.com/mannd/epmobile
		\n\nCopyright \u00a9 2011-2014 EP Studios, Inc.
		\nLicensed under GNU GPL v3.</string>
    <string name="main_index_title">EP Mobile</string>
    <string name="about_label">About</string>
    <string name="about_title">About EP Mobile</string>
    <string name="dofetilide_label">Dofetilide Calculator</string>
    <string name="dofetilide_calculator_title">Dofetilide Calculator</string>
    <string name="dabigatran_calculator_title">Dabigatran Calculator</string>
    <string name="dabigatran_label">Dabigatran Calculator</string>
    <string name="qtc_calculator_title">QTc Calculator</string>
    <string name="cycle_length_label">Interval/Rate Conversion</string>
    <string name="cycle_length_calculator_title">Interval/Rate Conversion</string>
    <string name="rr_hint">RR (msec)</string>
    <string name="interval_rate_title">Interval or Rate</string>
    <string name="interval_rate_summary">Use RR interval or heart rate as default</string>
    <string name="qt_label">QT Interval (msec)</string>
    <string name="qt_hint">QT (msec)</string>
    <string name="qtc_result_label">QTc (msec)</string>
    <string name="qtc_formula_label">QTc Formula</string>
    <string name="calculate_label">Calculate!</string>
    <string name="clear_label">Clear</string>
    <string name="dose_result_label">Dose</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="weight_lb_hint">Weight (lb)</string>
    <string name="creatinine_hint">Creatinine (mg/dL)</string>
    <string name="age_hint">Age (yr)</string>
    <string name="age_label">Age (yr)</string>
    <string name="creatinine_clearance_label"></string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="cl_label">Interval to Rate</string>
    <string name="cl_hint">Interval (msec)</string>
    <string name="hr_label">Rate to Interval</string>
    <string name="hr_hint">Rate (bpm)</string>
    <string name="calculated_result_label"></string>
    <string name="qtc_formula_title">Default QTc Formula</string>
    <string name="qtc_formula_summary">Select the default QTc formula</string>
    <string name="maximum_qtc_title">Maximum QTc</string>
    <string name="maximum_qtc_summary">Enter the maximum QTc in msec</string>
    <string name="maximum_qtc_message">This value is used to
		color code (with red) abnormally high QTc values</string>
    <string name="maximum_qtc_default_value">440</string>
    <string name="settings_label">Settings…</string>
    <string name="settings_shortcut">s</string>
    <string name="settings_title">EP Mobile Settings</string>
    <string name="hasbled_title">HAS-BLED Score</string>
    <string name="htn_label">Hypertension (systolic BP \u2267 160)</string>
    <string name="abnormal_renal_label">Abnormal renal function
		(dialysis, kidney transplant, Cr \u2267 2.6 mg/dL)</string>
    <string name="abnormal_liver_label">Abnormal liver function</string>
    <string name="stroke_label">Previous stroke history</string>
    <string name="bleeding_label">Major bleeding history</string>
    <string name="labile_inr_label">Labile INRs (high INRs, or &lt;60%
		of time in therapeutic range)</string>
    <string name="age65_label">Age 65 or over</string>
    <string name="drug_label">Taking antiplatelet drugs
		(e.g. ASA, Plavix)</string>
    <string name="etoh_label">Alcohol intake (8 or more drinks per week)</string>
    <string name="normal_hasbled">Low bleeding risk</string>
    <string name="abnormal_hasbled">High bleeding risk</string>
    <string name="chads_title">CHADS\u2082 Score</string>
    <string name="chf_label">Congestive heart failure</string>
    <string name="age75_label">Age 75 or over</string>
    <string name="diabetes_label">Diabetes mellitus</string>
    <string name="low_chads_message">Aspirin recommended</string>
    <string name="medium_chads_message">Aspirin or
		anticoagulation (warfarin, dabigatran, rivaroxaban or apixaban) recommended</string>
    <string name="high_chads_message">Anticoagulation (warfarin, dabigitran, rivaroxaban or apixaban) recommended</string>
    <string name="chadsvasc_title">CHA\u2082DS\u2082-VASc Score</string>
    <string name="vascular_label">Vascular disease (e.g. PVD, CAD, aortic plaque)</string>
    <string name="low_chadsvasc_message">No antithrombotic therapy or use Aspirin</string>
    <string name="medium_chadsvasc_message">Anticoagulation (warfarin, dabigitran, rivaroxaban or apixaban) or Aspirin (anticoagulation preferred)</string>
    <string name="high_chadsvasc_message">Anticoagulation
		(warfarin, dabigitran, rivaroxaban or apixaban) recommended</string>
    <string name="warfarin_title">Warfarin Clinic</string>
    <string name="warfarin_label">Warfarin Dose Calculator</string>
    <string name="tablet_label">Tablet</string>
    <string name="tablet1">1 mg</string>
    <string name="tablet2">2 mg</string>
    <string name="tablet3">2.5 mg</string>
    <string name="tablet4">3 mg</string>
    <string name="tablet5">4 mg</string>
    <string name="tablet6">5 mg</string>
    <string name="tablet7">6 mg</string>
    <string name="tablet8">7.5 mg</string>
    <string name="tablet9">10 mg</string>
    <string name="inr_label">Current INR</string>
    <string name="weekly_dose_label">Current Dose (mg/wk)</string>
    <string name="inr_hint">INR</string>
    <string name="weekly_dose_hint">Dose (mg/wk)</string>
    <string name="inr_target_label">INR Target</string>
    <string name="inr_target1">2.0 – 3.0</string>
    <string name="inr_target2">2.5 – 3.5</string>
    <string name="default_warfarin_tablet_title">Default Warfarin Tablet</string>
    <string name="default_warfarin_tablet_summary">Select the default warfarin tablet strength</string>
    <string name="default_inr_target_title">Default INR Target</string>
    <string name="default_inr_target_summary">Default INR target range</string>
    <string name="dose_table_title">Suggested Weekly Warfarin Doses</string>
    <string name="warfarin_result_title">Suggested Warfarin Dosing</string>
    <string name="warfarin_reference">Reference: Horton J, Bushwick B: American Family
		Physician. Feb 1, 1999.
		http://www.aafp.org/afp/990201ap/635.html</string>
    <string name="wct_algorithm_list_title">Wide Complex Tachycardia</string>
    <string name="wct_algorithm_title">Wide Complex Tachycardia</string>
    <string name="brugada_vt_title">Brugada Criteria SVT vs VT</string>
    <string name="brugada_wct_title">Brugada Algorithm</string>
    <string name="brugada_step_1">Absence of an RS complex in all precordial leads?</string>
    <string name="brugada_step_2">R to S interval > 100 msec in one precordial lead?</string>
    <string name="brugada_step_3">AV dissociation?</string>
    <string name="qtc_settings">QTc Calculator Settings</string>
    <string name="warfarin_settings">Warfarin Settings</string>
    <string name="drug_calculator_settings">Other Calculator Settings</string>
    <string name="default_weight_unit_title">Default Weight Unit</string>
    <string name="default_weight_unit_summary">Select default unit for weight</string>
    <string name="qtc_label">QTc Interval</string>
    <string name="short_qt_label">\u003c 370 msec</string>
    <string name="shorter_qt_label">\u003c 350 msec</string>
    <string name="shortest_qt_label">\u003c 330 msec</string>
    <string name="jt_label">Jpoint-Tpeak Interval</string>
    <string name="short_jt_label">\u003c 120 msec</string>
    <string name="clinical_history_label">Clinical History</string>
    <string name="sudden_cardiac_arrest_label">Sudden cardiac arrest</string>
    <string name="polymorphic_vt_label">Polymorphic VT or VF</string>
    <string name="unexplained_syncope_label">Unexplained syncope</string>
    <string name="afb_label">Atrial fibrillation</string>
    <string name="family_hx_label">Family History</string>
    <string name="relative_with_sqts_label">1st or 2nd degree relative with SQTS</string>
    <string name="relative_with_sd_label">1st or 2nd degree relative with sudden death</string>
    <string name="sids_label">Sudden infant death syndrome</string>
    <string name="genotype_label">Genotype</string>
    <string name="genotype_positive_label">Genotype positive</string>
    <string name="mutation_label">Mutation of undetermined significance
	    in a culprit gene</string>
    <string name="sqts_reference">Gollob M, et al. J Am Coll Cardiol 2011;57:802.</string>
    <string name="instructions_label">Instructions</string>
    <string name="ecg_findings_label">ECG Findings</string>
    <string name="longest_qt_label">QTc \u2265 480 msec</string>
    <string name="longer_qt_label">QTc 460–479 msec</string>
    <string name="long_qt_label">QTc 450–459 msec (in males)</string>
    <string name="long_qt_post_exercise_label">QTc 4th min of recovery from exercise stress test
        \u2265 480 msec</string>
    <string name="torsade_label">Torsade de pointes</string>
    <string name="t_wave_alternans_label">T wave alternans</string>
    <string name="notched_t_wave_label">Notched T wave in 3 leads</string>
    <string name="low_hr_label">Low heart rate for age*</string>
    <string name="clinical_hx_label">Clinical History</string>
    <string name="syncope_with_stress_label">Syncope with stress</string>
    <string name="syncope_without_stress_label">Syncope without stress</string>
    <string name="congenital_deafness_label">Congenital deafness</string>
    <string name="family_hx_lqt_label">Family members with definite LQTS</string>
    <string name="family_hx_scd_label">Unexplained SCD \u003c age 30 in immediate family</string>
    <string name="lqts_key">ECG findings in absence of medications that affect ECG, 
        LQTS = long QT syndrome, QTc calculated by Bazett formula,
        SCD = sudden cardiac death, *resting heart rate below 2nd percentile for age.
        Note: the same family member cannot be counted more than once.</string>
    <string name="lqts_reference">Schwartz PJ et al.  Circulation 2011;124:2181.
        http://circ.ahajournals.org/content/124/20/2181</string>
    <string name="sokolow_label">Sokolow-Lyon Index</string>
    <string name="sokolow_s_plus_r_label">S in V1 + R in V5 or V6</string>
    <string name="sokolow_s_plus_r_result">\u2265 35 mm</string>
    <string name="sokolow_r_in_avl_label">R in aVL</string>
    <string name="sokolow_r_in_avl_result">\u2265 11 mm</string>
    <string name="cornell_label">Cornell Voltage Criteria</string>
    <string name="cornell_men_label">S in V3 + R in aVL (men)</string>
    <string name="cornell_men_result">> 28 mm</string>
    <string name="cornell_women_label">S in V3 + R in aVL (women)</string>
    <string name="cornell_women_result">> 20 mm</string>
    <string name="other_voltage_criteria_label">Minnesota Code 3.1</string>
    <string name="other_lvh_lead_i_label">R in I, II, III, or aVF</string>
    <string name="other_lvh_lead_i_result">> 20 mm</string>
    <string name="other_lvh_lead_avl_label">R in aVL</string>
    <string name="other_lvh_lead_avl_result">> 12 mm</string>
    <string name="other_lvh_lead_v5_label">R in V5 or V6</string>
    <string name="other_lvh_lead_v5_result">> 26 mm</string>
    <string name="other_lvh_key">LVH present if any of above voltage criteria met.</string>
    <string name="other_lvh_reference">Reference: Hsieh BP et al. Am Heart J 2005;150:161.</string>
</resources>