<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <PreferenceCategory android:title="@string/qtc_settings">
    <ListPreference
    	android:title="@string/qtc_formula_title"
    	android:key="qtc_formula"
    	android:summary="@string/qtc_formula_summary"
    	android:entries="@array/formula_names"
    	android:entryValues="@array/formula_values"
    	android:defaultValue="BAZETT"
    	>
    </ListPreference>
    <EditTextPreference 
    	android:title="@string/maximum_qtc_title"
    	android:key="maximum_qtc"
    	android:summary="@string/maximum_qtc_summary"
    	android:dialogTitle="@string/maximum_qtc_title"
    	android:dialogMessage="@string/maximum_qtc_message"
    	android:inputType="number"
    	android:defaultValue="@string/maximum_qtc_default_value">
    </EditTextPreference>
    <ListPreference
    	android:title="@string/interval_rate_title"
    	android:key="interval_rate"
    	android:summary="@string/interval_rate_summary"
    	android:entries="@array/interval_rate_labels"
    	android:entryValues="@array/interval_rate_values"
    	android:defaultValue="RATE">
    </ListPreference>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/warfarin_settings">
  	<ListPreference
  		android:title="@string/default_warfarin_tablet_title"
  		android:key="default_warfarin_tablet"
  		android:summary="@string/default_warfarin_tablet_summary"
  		android:entries="@array/warfarin_tablets"
  		android:entryValues="@array/warfarin_tablet_values"
  		android:defaultValue="2">
  	</ListPreference>
  	<ListPreference
  		android:title="@string/default_inr_target_title"
  		android:key="default_inr_target"
  		android:summary="@string/default_inr_target_summary"
  		android:entries="@array/inr_targets"
  		android:entryValues="@array/inr_target_values"
  		android:defaultValue="0">
  	</ListPreference>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/drug_calculator_settings">
 	<ListPreference
 	    android:title="@string/default_weight_unit_title"
 	    android:key="default_weight_unit"
 	    android:summary="@string/default_weight_unit_summary"
 	    android:entries="@array/weight_unit_labels"
 	    android:entryValues="@array/weight_unit_values"
 	    android:defaultValue="KG">   
	</ListPreference> 	    	
  </PreferenceCategory>
</PreferenceScreen>
