<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent"
		android:background="@color/background" android:layout_height="match_parent"
		android:padding="3dip"
		android:orientation="vertical">
		<CheckBox android:id="@+id/hypertension" android:text="@string/htn_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/abnormal_renal_function"
			android:text="@string/abnormal_renal_label" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/abnormal_liver_function"
			android:text="@string/abnormal_liver_label" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/stroke" android:text="@string/stroke_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/bleeding" android:text="@string/bleeding_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/labile_inr" android:text="@string/labile_inr_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/age65" android:text="@string/age65_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/drug" android:text="@string/drug_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<CheckBox android:id="@+id/etoh" android:text="@string/etoh_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />

		<LinearLayout android:layout_width="match_parent"
			android:id="@+id/linearLayout3" 
			android:layout_height="wrap_content">
			<Button android:id="@+id/calculate_button" android:text="@string/calculate_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<Button android:id="@+id/clear_button" android:text="@string/clear_label"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
