<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/Header1"
            android:text="@string/ecg_findings_label" />

        <RadioGroup
            android:id="@+id/qtc_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/longest_qt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longest_qt_label" />

            <RadioButton
                android:id="@+id/longer_qt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longer_qt_label" />

            <RadioButton
                android:id="@+id/long_qt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/long_qt_label" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/long_qt_post_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_qt_post_exercise_label" />

        <CheckBox
            android:id="@+id/torsade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/torsade_label" />

        <CheckBox
            android:id="@+id/t_wave_alternans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_wave_alternans_label" />

        <CheckBox
            android:id="@+id/notched_t_wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notched_t_wave_label" />

        <CheckBox
            android:id="@+id/low_hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_hr_label" />

        <TextView
            style="@style/Header1"
            android:text="@string/clinical_hx_label" />

        <RadioGroup
            android:id="@+id/syncope_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/syncope_with_stress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/syncope_with_stress_label" />

            <RadioButton
                android:id="@+id/syncope_without_stress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/syncope_without_stress_label" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/congenital_deafness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congenital_deafness_label" />

        <TextView
            style="@style/Header1"
            android:text="@string/family_hx_label" />

        <CheckBox
            android:id="@+id/family_hx_lqt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_hx_lqt_label" />

        <CheckBox
            android:id="@+id/family_hx_scd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_hx_scd_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_label" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_label" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/lqts_key" >
        </TextView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="3dip"
            android:text="@string/lqts_reference" >
        </TextView>
    </LinearLayout>

</ScrollView>