<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="3dip" >

        <CheckBox
            android:id="@+id/chf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chf_label" />

        <CheckBox
            android:id="@+id/hypertension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/htn_label" />

        <CheckBox
            android:id="@+id/age75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age75_label" />

        <CheckBox
            android:id="@+id/diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diabetes_label" />

        <CheckBox
            android:id="@+id/stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stroke_label" />

        <CheckBox
            android:id="@+id/vascular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vascular_label" />

        <CheckBox
            android:id="@+id/age65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age65_label" />

        <CheckBox
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_label" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_label" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_label" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>